# ImageEditor

./: CMakeLists.txt  Terv.docx
src/: BlendMode.cpp  BlendMode.hpp  Commands.cpp  Commands.hpp  Image.cpp  Image.hpp  Layer.cpp  Layer.hpp  Pixel.cpp  Pixel.hpp  Project.cpp  Project.hpp  main.cpp  stb_image.h
src/filter/: Filter.cpp  Filter.hpp
